syntax = "proto3";

package auth.v1;

option go_package = "github.com/sukryu/IV-auth-services/internal/proto/auth/v1;authv1";

import "google/protobuf/timestamp.proto";

// PlatformService는 플랫폼 계정 관리 기능을 제공하는 gRPC 서비스입니다.
// 외부 플랫폼 계정 연결, 토큰 갱신, 해제를 처리합니다.
service PlatformService {
  // ConnectPlatform은 사용자의 외부 플랫폼 계정을 연동합니다.
  rpc ConnectPlatform(ConnectPlatformRequest) returns (PlatformAccountResponse) {}

  // RefreshPlatformToken은 플랫폼 계정의 토큰을 갱신합니다.
  rpc RefreshPlatformToken(RefreshPlatformTokenRequest) returns (PlatformAccountResponse) {}

  // DisconnectPlatform은 플랫폼 계정을 해제합니다.
  rpc DisconnectPlatform(DisconnectPlatformRequest) returns (DisconnectPlatformResponse) {}
}

// ConnectPlatformRequest는 플랫폼 계정 연동 요청 메시지입니다.
message ConnectPlatformRequest {
  string user_id = 1;      // 연동할 사용자의 ID (필수)
  string platform = 2;     // 플랫폼 종류 (TWITCH, YOUTUBE 등, 필수)
  string auth_code = 3;    // OAuth 인증 코드 (필수)
}

// PlatformAccountResponse는 플랫폼 계정 연동/갱신 응답 메시지입니다.
message PlatformAccountResponse {
  PlatformAccount account = 1; // 연동 또는 갱신된 플랫폼 계정 정보
}

// PlatformAccount는 플랫폼 계정 엔티티를 표현하는 메시지입니다.
message PlatformAccount {
  string id = 1;                    // 계정 ID (UUID)
  string user_id = 2;               // 소유자 사용자 ID
  string platform = 3;              // 플랫폼 종류 (TWITCH, YOUTUBE 등)
  string platform_user_id = 4;      // 플랫폼 사용자 ID
  string platform_username = 5;     // 플랫폼 사용자명
  string access_token = 6;          // OAuth 액세스 토큰
  string refresh_token = 7;         // OAuth 리프레시 토큰
  google.protobuf.Timestamp token_expires_at = 8; // 토큰 만료 시각
  google.protobuf.Timestamp created_at = 9;       // 생성 시각
  google.protobuf.Timestamp updated_at = 10;      // 수정 시각
}

// RefreshPlatformTokenRequest는 플랫폼 토큰 갱신 요청 메시지입니다.
message RefreshPlatformTokenRequest {
  string platform_account_id = 1; // 갱신할 플랫폼 계정 ID (필수)
}

// DisconnectPlatformRequest는 플랫폼 계정 해제 요청 메시지입니다.
message DisconnectPlatformRequest {
  string platform_account_id = 1; // 해제할 플랫폼 계정 ID (필수)
}

// DisconnectPlatformResponse는 플랫폼 계정 해제 응답 메시지입니다.
message DisconnectPlatformResponse {
  bool success = 1; // 해제 성공 여부
}